--- a/src/i18n/en/errors.json
+++ b/src/i18n/en/errors.json
@@ -1,4 +1,5 @@
 {
   "emailAlreadyExists": "Email already exists",
-  "badCredentials": "Email or password is incorrect"
+  "badCredentials": "Email or password is incorrect",
+  "userNotFound": "userNotFound"
 }
