--- a/src/i18n/en/errors.json
+++ b/src/i18n/en/errors.json
@@ -1,4 +1,6 @@
 {
   "emailAlreadyExists": "Email already exists",
-  "badCredentials": "Email or password is incorrect"
+  "badCredentials": "Email or password is incorrect",
+  "userNotFound": "User not found",
+  "internalServerError": "Internal server error"
 }
