--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -2,5 +2,6 @@
   "titleResetPassword": "You have requested to reset your password",
   "titleTagResetPassword": "Reset Password Email",
   "textResetPassword": "To reset your password, click the link below and follow the instructions.",
-  "buttonResetPassword": "Reset password"
+  "buttonResetPassword": "Reset password",
+  "resetPassword": "Reset password"
 }
